--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-    <h2>Vote for your product</h2>
+        <h2>Vote for your product</h2>
     </header>
     <main>
-    <section >
-        <img src="" alt="" id="1">
-        <img src="" alt="" id="2">
-        <img src="" alt="" id="3">
-    </section>
-     <section id="sec-two">
-        <ul id="unList"></ul>
-    </section>
-    <section id="ul1">
-        <ul id="ulList1"></ul>
-    </section>
-</main>
-<footer>
-    
-</footer>
+        <section id="one">
+            <img src="" alt="" id="1">
+            <img src="" alt="" id="2">
+            <img src="" alt="" id="3">
+        </section>
+        <button id="btn"> showing list </button>
+
+        <section id="sec-two">
+            <ul id="unList"></ul>
+        </section>
+        <canvas id="myChart" width="400" height="400"></canvas>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <script src="app.js"></script>
 </body>
+
 </html>
